# test-lvgl-cross-compile

./: .gitignore  CLAUDE.md  Pi Setup.md  README.md  SERVICE-STARTUP-GUIDE.md  SESSION-SUMMARY-KIOSK-MODE.md  SESSION-SUMMARY.md  TODO.md  add_topbar.py  create-github-repo.md  squareline-manual-guide.md
.claude/: settings.local.json
config/: hardware_config.h
docs/: BASIC_OPERATIONS.md  BATTERY_CONFIGURATION.md  HARDWARE_DIAGRAM.txt  KIOSK_PROPOSAL.md  PERIPHERAL_ARCHITECTURE.md  PROJECT_STATUS.md  QUICKSTART_GPS_MODULE.md
kiosk/: COMPLETE-SYSTEM-README.md  KIOSK-SETUP.md  QUICKSTART.md  README.md  VICTRON-TOUCHSCREEN.md  autostart  check-touchscreen-hardware.sh  configure-touchscreen.sh  create-touchscreen-driver.sh  dashboard-kiosk.service  diagnose-autostart.sh  diagnose-dashboard-and-gps.sh  diagnose-gps-service.sh  diagnose-startup.sh  diagnose-touchscreen.sh  enable-gps-autoboot.sh  fix-adapter-issue.sh  fix-autoboot.sh  fix-autostart.sh  fix-dashboard-and-gps.sh  fix-influxdb-autostart.sh  fix-touchscreen-evdev.sh  fix-touchscreen-service.sh  install-kiosk.sh  install-simple-autostart.sh  install-victron-touchscreen.sh  kiosk-startup.service  launch-kiosk.sh  quick-fix-evdev-bug.sh  quick-fix-touchscreen.sh  scan-all-i2c-buses.sh  setup-complete-system.sh  setup-kiosk.sh  setup-touchscreen-bus21.sh  setup-victron-touchscreen.sh  start-all-now.sh  start-all.sh  start-telemetry.sh  startup-services.sh  update-autostart-kiosk.sh
lib/LeafCANBus/: library.json
lib/LeafCANBus/src/: LeafCANBus.cpp  LeafCANBus.h  LeafCANMessages.cpp  LeafCANMessages.h
lvgl-demo/: .gitignore  lvgl-demo.sll  lvgl-demo.slp  lvgl-demo.spj  lvgl-demo.spj copy.backup  lvgl-demo.spj.backup  project.info
lvgl-demo/assets/: ui_font_DNR_Large.c  ui_font_DNR_Large.fcfg  ui_font_Heading.fcfg  ui_font_Label_Small.fcfg  ui_font_Speed.fcfg  ui_font_Value_Small.fcfg
lvgl-demo/images/: EMBOO.dxf  EMBOO_Wordmark.dxf
modules/bms-victron/: README.md  platformio.ini
modules/bms-victron/src/: main.cpp
modules/gps-module/src/: main.cpp
modules/imu-module/: platformio.ini
modules/temp-module/: platformio.ini
scripts/: check-system.sh  start-system.sh  stop-system.sh  test-can.sh  test-dashboard-build.sh  test-gps.sh
telemetry-system/: KIOSK-MODE.md  PHASE_1_2_COMPLETE.md  QUICKSTART.md  QUICK_FIX.md  README.md  SCHEMA_V2.md  WEB_DASHBOARD_DEVELOPMENT_PLAN.md
telemetry-system/config/: influxdb-cloud.env.template
telemetry-system/scripts/: clear-influxdb-data.sh  diagnose-schema.sh  diagnose-services.sh  setup-environment.sh  setup-influxdb.sh  update-services.sh
telemetry-system/services/cloud-sync/: cloud_sync.py  requirements.txt
telemetry-system/services/gps-time-sync/: gps_time_sync.py
telemetry-system/services/telemetry-logger/: requirements.txt  telemetry_logger.py
telemetry-system/services/usb-gps-reader/: requirements.txt  usb_gps_reader.py
telemetry-system/services/web-dashboard/: app.py  app_desktop.py  requirements.txt  trip_tracker.py
telemetry-system/services/web-dashboard/static/: index.html  kiosk.html
telemetry-system/services/web-dashboard/static/css/: style.css
telemetry-system/services/web-dashboard/static/js/: app.js  kiosk.js
telemetry-system/systemd/: cloud-sync.service  desktop-dashboard.service  gps-time-sync.service  telemetry-logger-can1.service  telemetry-logger-unified.service  telemetry-logger.service  usb-gps-reader.service  web-dashboard.service
telemetry-system/tests/: mock_can_generator.py  test_can_ids.py  test_system.sh
ui-dashboard/: CMakeLists.txt  WINDOWS_BUILD.md  lv_conf.h
ui-dashboard/src/: main.cpp
ui-dashboard/src/platform/linux/: fbdev_display.cpp  fbdev_display.h  socketcan.cpp  socketcan.h
ui-dashboard/src/platform/windows/: can_log_demo.txt  mock_can.cpp  mock_can.h  sdl_display.cpp  sdl_display.h
ui-dashboard/src/shared/: can_receiver.cpp  can_receiver.h
ui-dashboard/src/ui/: CMakeLists.txt  dashboard_ui.cpp  dashboard_ui.h  filelist.txt  project.info  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
ui-dashboard/src/ui/components/: ui_comp_hook.c
ui-dashboard/src/ui/fonts/: ui_font_Heading.c  ui_font_Label_Small.c  ui_font_Speed.c  ui_font_Value_Small.c
ui-dashboard/src/ui/screens/: ui_screen_charging.c  ui_screen_charging.h  ui_screen_main.c  ui_screen_main.h
ui-dashboard/systemd/: leaf-can-dashboard.service
